--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>BMI Calculator</title>
 </head>
 <body>
@@ -28,6 +28,6 @@
         </div>
     </form>
     
-    <div class="result">Result</div>
+    <div id="result"></div>
 </body>
 </html>
